refactor: supports telegram_chat_service